# Heat_equation

./: .gitignore
src/: CMakeLists.txt  GaussSeidel.h  Mapper2D.h  SimulationParameter.h  SolveGaussSeidel.h  TestCase1.cpp  TestCase2.cpp  VtkData.cpp  VtkData.h  VtkWriter.cpp  VtkWriter.h  Vtktestfile.cpp  main.cpp
